infra/kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  namespace: bombastic
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-app
          image: api-image
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 2
            initialDelaySeconds: 15
            periodSeconds: 2
            successThreshold: 2
            httpGet:
              port: 8080
              path: /actuator/health
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 500Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
            - mountPath: /app/certs
              name: apple-certificate
            - mountPath: /app/certs/jwks
              name: jwk-certificates
      volumes:
        - name: apple-certificate
          secret:
            secretName: apple-certificate
        - name: jwk-certificates
          secret:
            secretName: jwks-certificates
