infra/kubernetes/app/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
spec:
  routes:
    - match: "Host(`bombastic.joell.dev`)"
      kind: Rule
      services:
        - name: api
          port: 80
  tls:
    certResolver: default
